--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -794,11 +794,6 @@ video {
   background-color: rgb(226 247 255 / var(--tw-bg-opacity));
 }
 
-.bg-headlinecard-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 234 238 / var(--tw-bg-opacity));
-}
-
 .bg-red-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
@@ -809,69 +804,29 @@ video {
   background-color: rgb(224 242 254 / var(--tw-bg-opacity));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-slateblueg-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(180 172 230 / var(--tw-bg-opacity));
-}
-
-.bg-slateblueg-1400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(227 224 245 / var(--tw-bg-opacity));
-}
-
-.bg-slateblueg-1600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(245 244 251 / var(--tw-bg-opacity));
-}
-
 .bg-slateblueg-1500 {
   --tw-bg-opacity: 1;
   background-color: rgb(236 234 248 / var(--tw-bg-opacity));
 }
 
-.bg-cyangrad-100 {
+.bg-white {
   --tw-bg-opacity: 1;
-  background-color: rgb(0 255 255 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-deepskyblue-400 {
+.bg-antiquewhiteg-400 {
   --tw-bg-opacity: 1;
-  background-color: rgb(84 212 255 / var(--tw-bg-opacity));
+  background-color: rgb(251 241 228 / var(--tw-bg-opacity));
 }
 
-.bg-navajoWhite4g-700 {
+.bg-antiquewhiteg-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(216 210 201 / var(--tw-bg-opacity));
+  background-color: rgb(253 250 246 / var(--tw-bg-opacity));
 }
 
-.bg-navajoWhite4g-900 {
+.bg-antiquewhiteg-900 {
   --tw-bg-opacity: 1;
-  background-color: rgb(242 240 237 / var(--tw-bg-opacity));
-}
-
-.bg-greyg-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
-}
-
-.bg-lightblueg-1000 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(225 241 246 / var(--tw-bg-opacity));
-}
-
-.bg-lightblueg-1200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(237 246 249 / var(--tw-bg-opacity));
-}
-
-.bg-greyg-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(232 232 232 / var(--tw-bg-opacity));
+  background-color: rgb(254 252 250 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -1111,56 +1066,6 @@ video {
 
 .text-topheading {
   color: ##043585;
-}
-
-.text-slateblueg-700 {
-  --tw-text-opacity: 1;
-  color: rgb(161 151 223 / var(--tw-text-opacity));
-}
-
-.text-slateblueg-1000 {
-  --tw-text-opacity: 1;
-  color: rgb(189 182 233 / var(--tw-text-opacity));
-}
-
-.text-slateblueg-1600 {
-  --tw-text-opacity: 1;
-  color: rgb(245 244 251 / var(--tw-text-opacity));
-}
-
-.text-slateblueg-1100 {
-  --tw-text-opacity: 1;
-  color: rgb(199 193 236 / var(--tw-text-opacity));
-}
-
-.text-slateblueg-100 {
-  --tw-text-opacity: 1;
-  color: rgb(106 90 205 / var(--tw-text-opacity));
-}
-
-.text-slateblueg-200 {
-  --tw-text-opacity: 1;
-  color: rgb(115 100 208 / var(--tw-text-opacity));
-}
-
-.text-slateblueg-900 {
-  --tw-text-opacity: 1;
-  color: rgb(180 172 230 / var(--tw-text-opacity));
-}
-
-.text-deepskyblue-900 {
-  --tw-text-opacity: 1;
-  color: rgb(226 247 255 / var(--tw-text-opacity));
-}
-
-.text-deepskyblue-300 {
-  --tw-text-opacity: 1;
-  color: rgb(56 205 255 / var(--tw-text-opacity));
-}
-
-.text-deepskyblue-100 {
-  --tw-text-opacity: 1;
-  color: rgb(0 191 255 / var(--tw-text-opacity));
 }
 
 .shadow-lg {
