--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -620,6 +620,22 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
+.inset-0 {
+  inset: 0px;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.float-right {
+  float: right;
+}
+
 .m-auto {
   margin: auto;
 }
@@ -677,8 +693,16 @@ video {
   width: 1.5rem;
 }
 
+.w-\[90\%\] {
+  width: 90%;
+}
+
 .w-full {
   width: 100%;
+}
+
+.max-w-3xl {
+  max-width: 48rem;
 }
 
 .max-w-7xl {
@@ -695,6 +719,10 @@ video {
 
 .cursor-not-allowed {
   cursor: not-allowed;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .list-disc {
@@ -768,6 +796,11 @@ video {
   background-color: rgb(254 252 250 / var(--tw-bg-opacity));
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-cyangrad-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(226 255 255 / var(--tw-bg-opacity));
@@ -803,6 +836,16 @@ video {
   background-color: rgb(226 247 255 / var(--tw-bg-opacity));
 }
 
+.bg-lightblueg-1300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 249 251 / var(--tw-bg-opacity));
+}
+
+.bg-lightblueg-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(214 235 242 / var(--tw-bg-opacity));
+}
+
 .bg-red-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 202 202 / var(--tw-bg-opacity));
@@ -813,14 +856,13 @@ video {
   background-color: rgb(224 242 254 / var(--tw-bg-opacity));
 }
 
-.bg-slateblueg-1500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(236 234 248 / var(--tw-bg-opacity));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
 }
 
 .object-cover {
@@ -1025,6 +1067,11 @@ video {
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
+.text-browngrad-100 {
+  --tw-text-opacity: 1;
+  color: rgb(139 35 35 / var(--tw-text-opacity));
+}
+
 .text-browngrad-300 {
   --tw-text-opacity: 1;
   color: rgb(164 83 83 / var(--tw-text-opacity));
@@ -1033,6 +1080,11 @@ video {
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .text-gray-800 {
@@ -1072,41 +1124,6 @@ video {
 
 .text-topheading {
   color: ##043585;
-}
-
-.text-red-200 {
-  --tw-text-opacity: 1;
-  color: rgb(254 202 202 / var(--tw-text-opacity));
-}
-
-.text-blue-200 {
-  --tw-text-opacity: 1;
-  color: rgb(191 219 254 / var(--tw-text-opacity));
-}
-
-.text-blue-100 {
-  --tw-text-opacity: 1;
-  color: rgb(219 234 254 / var(--tw-text-opacity));
-}
-
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-
-.text-navajoWhite4g-600 {
-  --tw-text-opacity: 1;
-  color: rgb(203 195 183 / var(--tw-text-opacity));
-}
-
-.text-navajoWhite4g-100 {
-  --tw-text-opacity: 1;
-  color: rgb(139 121 94 / var(--tw-text-opacity));
-}
-
-.text-browngrad-100 {
-  --tw-text-opacity: 1;
-  color: rgb(139 35 35 / var(--tw-text-opacity));
 }
 
 .shadow {
