--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -737,6 +737,10 @@ video {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
+.grid-rows-\[auto_8rem_3rem\] {
+  grid-template-rows: auto 8rem 3rem;
+}
+
 .items-center {
   align-items: center;
 }
@@ -779,6 +783,10 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -795,28 +803,14 @@ video {
   border-width: 4px;
 }
 
-.border-8 {
-  border-width: 8px;
-}
-
-.border-\[\#8B4513\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(139 69 19 / var(--tw-border-opacity));
-}
-
-.border-\[\#98fb98\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(152 251 152 / var(--tw-border-opacity));
-}
-
-.border-\[\#8b795e\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(139 121 94 / var(--tw-border-opacity));
-}
-
 .border-\[\#383838\] {
   --tw-border-opacity: 1;
   border-color: rgb(56 56 56 / var(--tw-border-opacity));
+}
+
+.border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .bg-antiquewhiteg-900 {
@@ -827,11 +821,6 @@ video {
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-cyangrad-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-deepskyblue-100 {
@@ -864,6 +853,11 @@ video {
   background-color: rgb(226 247 255 / var(--tw-bg-opacity));
 }
 
+.bg-lightblueg-1000 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(225 241 246 / var(--tw-bg-opacity));
+}
+
 .bg-lightblueg-1300 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 249 251 / var(--tw-bg-opacity));
@@ -872,6 +866,16 @@ video {
 .bg-lightblueg-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(214 235 242 / var(--tw-bg-opacity));
+}
+
+.bg-paleGreen-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(186 252 186 / var(--tw-bg-opacity));
+}
+
+.bg-paleGreen-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 253 220 / var(--tw-bg-opacity));
 }
 
 .bg-red-200 {
@@ -887,6 +891,36 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-browngrad-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(177 108 108 / var(--tw-bg-opacity));
+}
+
+.bg-browngrad-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(203 157 157 / var(--tw-bg-opacity));
+}
+
+.bg-browngrad-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 230 230 / var(--tw-bg-opacity));
+}
+
+.bg-browngrad-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 206 206 / var(--tw-bg-opacity));
+}
+
+.bg-deepskyblue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(84 212 255 / var(--tw-bg-opacity));
+}
+
+.bg-deepskyblue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(113 219 255 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -943,6 +977,11 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pl-6 {
@@ -1072,6 +1111,10 @@ video {
   line-height: 1.75rem;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .font-medium {
   font-weight: 500;
 }
@@ -1093,6 +1136,11 @@ video {
 .text-blue-500 {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
+}
+
+.text-blue-600 {
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
 }
 
 .text-browngrad-100 {
@@ -1154,11 +1202,6 @@ video {
   color: ##043585;
 }
 
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -1174,6 +1217,12 @@ video {
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1288,6 +1337,11 @@ a,
 .hover\:bg-sky-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(56 189 248 / var(--tw-bg-opacity));
+}
+
+.hover\:text-black:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
